# codeformatter

./: .WolframResources  .project  CHANGELOG.md  CMakeLists.txt  HowToBuild.md  README.md
CodeFormatter/: PacletInfo.m  PacletInfo.wl  PacletInfo.wl.in
CodeFormatter/DarkModeSupport/StyleSheets/: Package.nb  Script.nb
CodeFormatter/Data/: InfixParselets.wl
CodeFormatter/Documentation/English/Guides/: CodeFormatter.nb
CodeFormatter/Documentation/English/ReferencePages/Symbols/: Airiness.nb  CodeFormat.nb
CodeFormatter/Documentation/English/Tutorials/: ReleaseNotes.nb
CodeFormatter/FrontEnd/StyleSheets/: Dialog.nb  Package.nb  Script.nb
CodeFormatter/FrontEnd/SystemResources/Bitmaps/Misc/: DarkModeManifest.wl
CodeFormatter/FrontEnd/TextResources/: CodeFormatter.tr
CodeFormatter/Generate/: AcceptableOperators.wl  GenerateSources.wl  MakeCodeFormatterAttachedCell.wl  PackPaclet.wl  Palette.wl  UIElements.wl
CodeFormatter/Kernel/: Absorb.wl  Abstract.wl  AggregateRules.wl  AnchoredComments.wl  BreakLines.wl  BreakLinesLegacy.wl  CodeFormatter.wl  ConcreteRules.wl  Experimental.wl  Fragmentize.wl  Indent.wl  LineBreakerV1.wl  Notebooks.wl  RemoveLineContinuations.wl  Standardize.wl  Utils.wl
Format/: PacletInfo.m
Format/Generate/: PackPaclet.wl
Format/Kernel/: AggregateRules.wl  Format.wl  Utils.wl
Tests/: Auxillary.nb  Bugs.mt  CodeFormatter.mt  CodeFormatterEyeballTests.nb  CodeFormatterNotes.nb  Format.mt  FormatNotes.nb  LineBreakerV2.mt  LineBreaking.mt  Newlines.mt  OpenBugs.mt  StandardizeNewlinesChanges.mt  TestSuite.mt
Tests/CodeFormatterTestUtils/: CodeFormatterTestUtils.wl
Tests/FormatTestUtils/: FormatTestUtils.wl
Tests/files/: 124524_0001.wl  comment.wl
docs/: airiness.md  airyness.md  canonicalization.md  compatibility.md  extents.md  indent.md  linebreaker-v1.md  linebreaker-v2.md  notes.md  notes.txt  options.md  philosophy.md  questions.md
scripts/: re_build_CodeFormatter.xml  re_build_Format.xml
